--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fs": "^0.0.1-security",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.1"
   },
   "devDependencies": {
